# buckholtz-idm-multing-study

./: .gitignore  APPENDIX_A1_EXTRACTION_SUMMARY.md  CHANGELOG.md  CITATION.cff  DISCOVERY_GATE.md  LICENSE  OUTREACH_TEMPLATE.md  PROJECT_STATUS.md  README.md  SESSION_HANDOFF_M2_G4.md  SESSION_HANDOFF_M7_A.md  SESSION_HANDOFF_M7_B.md  SESSION_HANDOFF_M7_C.md  TJB_DIAGNOSTIC_BRIEF.md  pyproject.toml  requirements.txt
audit/: fairness_diagnostics.py  force_ratios.py  hflrw_recovery.py  range_underdetermination.py  run_audit.py  run_double_inversion_diagnostic.py  run_k_a_closure_audit.py  self_consistency_diagnostic.py  sigma_distance_desi.py
code/: beta_cv.py  beta_rescaling.py  chi2_idm.py  eq32_verify.py
data/: README_nbody_k_a.md  chexmate_combined.csv  chexmate_real_TX.csv  clusters_clean.csv  hz_cc.csv  mcxc.csv  pearson_r_test_results.md  table_a1_extraction_log.md  table_a1_raw.csv  table_a1_reported.csv
docs/: 01_beta_definition_audit.md  02_equation_inventory.md  03_derived_fitted_assumed_unknown.md  04_assumption_dependency_graph.md  05_data_anchoring_map.md  06_rosetta_stone.md  07_numerology_audit_eq15.md  08_supplementary_audit.md  09_meeting_brief.md  100_hd_mavp_autopsy_internal.md  101_error_correction_sync_report.md  102_vs1_vault_sync_report.md  103_author_q1_q3_clarification_draft.md  104_author_q1_q3_send_ready_candidate.md  105_ab2_send_readiness_report.md  106_waiting_for_tjb_evidence_lock.md  107_post_m8_evidence_lock.md  107_post_m8a_evidence_lock.md  108_claim_status_matrix.md  109_post_m8d_evidence_lock.md  10_time_budget.md  111_beta_provenance_evidence_lock.md  112_waiting_for_tjb_master_lock.md  113_post_hd_mavp_selection_artifact_lock.md  114_o7_isomer_ratio_lock.md  115_beta1_hold.md  116_claim_status_matrix_v3.md  116b_open_questions_evidence_methodology.md  117_tjb_authored_procedure.md  118_journal_readiness_section_draft.md  119_weaknesses_referee_map.md  11_beta_normalization_math.md  (+93 more)
(+216 files in other folders)
